--- a/app/apl2017stats/most-runs-list/most-runs-list.component.html
+++ b/app/apl2017stats/most-runs-list/most-runs-list.component.html
@@ -8,7 +8,7 @@
     <ListView [items] = "players$ | async" height="300">
       <ng-template let-item="item">
         <GridLayout columns="auto,*,auto">
-         <Label class="m-5 name" [nsRouterLink]="['/item', item.id]" [text]="'Name:' + item.name + ' Run:' + item.run"></Label>
+         <Label class="m-5 name" [text]="'Name:' + item.name + ' Run:' + item.run"></Label>
         </GridLayout>
       </ng-template>
     </ListView>
