--- a/app/apl2017stats/most-runs-list/most-runs-list.component.html
+++ b/app/apl2017stats/most-runs-list/most-runs-list.component.html
@@ -1,9 +1,8 @@
 <ActionBar title="APL" class="action-bar">
 </ActionBar>
-
 <ScrollView>
   <StackLayout>
-    <Label class="h2 header" text="Most Runs"></Label>
+    <Label class="h2 header mx-auto" text="Most Runs"></Label>
   <StackLayout class="card">
     <ListView [items] = "players$ | async" height="300">
       <ng-template let-item="item">
