--- a/app/apl2017stats/apl2017stats.component.html
+++ b/app/apl2017stats/apl2017stats.component.html
@@ -1,6 +1,6 @@
 <StackLayout>
-      <button text="Most Runs" [nsRouterLink]="['/mostRunsList']" ></button>
-    <button text="Most Wickets" [nsRouterLink]="['/mostWicketsList']" ></button>
+      <button text="Most Runs" [nsRouterLink]="['mostRunsList']" ></button>
+    <button text="Most Wickets" [nsRouterLink]="['mostWicketsList']" ></button>
      <router-outlet></router-outlet>
 </StackLayout>
 
